@@ -24,6 +24,7 @@ import static com.hedera.mirror.web3.utils.ContractCallTestUtil.TRANSACTION_GAS_
 import static com.hedera.mirror.web3.validation.HexValidator.HEX_PREFIX;
 import static org.web3j.crypto.TransactionUtils.generateTransactionHashHexEncoded;
 
+import com.google.common.collect.Range;
 import com.hedera.mirror.common.domain.DomainBuilder;
 import com.hedera.mirror.common.domain.entity.EntityId;
 import com.hedera.mirror.web3.service.ContractExecutionService;
@@ -37,6 +38,8 @@ import java.io.IOException;
 import java.math.BigInteger;
 import java.util.List;
 import java.util.concurrent.CompletableFuture;
+import lombok.Getter;
+import lombok.Setter;
 import lombok.SneakyThrows;
 import org.apache.tuweni.bytes.Bytes;
 import org.bouncycastle.util.encoders.Hex;
@@ -67,21 +70,26 @@ import org.web3j.tx.gas.DefaultGasProvider;
 import org.web3j.utils.Numeric;
 
 @SuppressWarnings({"rawtypes", "unchecked"})
+@Getter
+@Setter
 public class TestWeb3jService implements Web3jService {
     private static final long DEFAULT_TRANSACTION_VALUE = 10L;
     private static final String MOCK_KEY = "0x4e3c5c727f3f4b8f8e8a8fe7e032cf78b8693a2b711e682da1d3a26a6a3b58b6";
-
+    private final DomainBuilder domainBuilder;
     private final ContractExecutionService contractExecutionService;
     private final ContractGasProvider contractGasProvider;
     private final Credentials credentials;
-    private final DomainBuilder domainBuilder;
     private final Web3j web3j;
+
     private Address sender = Address.fromHexString("");
     private boolean isEstimateGas = false;
     private String transactionResult;
     private String estimatedGas;
     private long value = 0L;
+    private boolean persistContract = true;
+    private byte[] contractRuntime;
     private BlockType blockType = BlockType.LATEST;
+    private Range historicalRange;
 
     public TestWeb3jService(ContractExecutionService contractExecutionService, DomainBuilder domainBuilder) {
         this.contractExecutionService = contractExecutionService;
@@ -91,36 +99,33 @@ public class TestWeb3jService implements Web3jService {
         this.web3j = Web3j.build(this);
     }
 
-    public void setSender(Address sender) {
-        this.sender = sender;
-    }
-
     public void setSender(String sender) {
         this.sender = Address.fromHexString(sender);
-    }
-
-    public String getTransactionResult() {
-        return transactionResult;
-    }
-
-    public String getEstimatedGas() {
-        return estimatedGas;
     }
 
     public void setEstimateGas(final boolean isEstimateGas) {
         this.isEstimateGas = isEstimateGas;
     }
 
-    public void setValue(final long value) {
-        this.value = value;
-    }
-
-    public void setBlockType(BlockType blockType) {
-        this.blockType = blockType;
+    public void reset() {
+        this.isEstimateGas = false;
+        this.contractRuntime = null;
+        this.persistContract = true;
+        this.sender = Address.ZERO;
+        this.value = 0L;
+        this.sender = Address.fromHexString("");
+        this.blockType = BlockType.LATEST;
+        this.historicalRange = null;
     }
 
     @SneakyThrows(Exception.class)
     public <T extends Contract> T deploy(Deployer<T> deployer) {
+        return deployer.deploy(web3j, credentials, contractGasProvider).send();
+    }
+
+    @SneakyThrows(Exception.class)
+    public <T extends Contract> T deployWithoutPersist(Deployer<T> deployer) {
+        persistContract = false;
         return deployer.deploy(web3j, credentials, contractGasProvider).send();
     }
 
@@ -142,7 +147,7 @@ public class TestWeb3jService implements Web3jService {
     }
 
     private EthSendTransaction call(List<?> params, Request request) {
-        var rawTransaction = TransactionDecoder.decode(params.get(0).toString());
+        var rawTransaction = TransactionDecoder.decode(params.getFirst().toString());
         var transactionHash = generateTransactionHashHexEncoded(rawTransaction, credentials);
         final var to = rawTransaction.getTo();
 
@@ -158,9 +163,8 @@ public class TestWeb3jService implements Web3jService {
         final var res = new EthSendTransaction();
         var serviceParameters = serviceParametersForTopLevelContractCreate(rawTransaction.getData(), ETH_CALL, sender);
         final var mirrorNodeResult = contractExecutionService.processCall(serviceParameters);
-
         try {
-            final var contractInstance = this.deployInternal(mirrorNodeResult);
+            final var contractInstance = deployInternal(mirrorNodeResult, persistContract);
             res.setResult(transactionHash);
             res.setRawResponse(contractInstance.toHexString());
             res.setId(request.getId());
@@ -192,22 +196,25 @@ public class TestWeb3jService implements Web3jService {
         res.setId(request.getId());
         res.setJsonrpc(request.getJsonrpc());
 
-        transactionResult = mirrorNodeResult;
+        transactionResult = estimatedGas = mirrorNodeResult;
         return res;
     }
 
     private EthCall ethCall(List<Transaction> reqParams, Request request) {
-        var transaction = reqParams.get(0);
+        var transaction = reqParams.getFirst();
 
         // First get the transaction result
         final var serviceParametersForCall = serviceParametersForExecutionSingle(transaction, ETH_CALL, blockType);
         final var result = contractExecutionService.processCall(serviceParametersForCall);
         transactionResult = result;
 
-        // Then get the estimated gas
-        final var serviceParametersForEstimate =
-                serviceParametersForExecutionSingle(transaction, ETH_ESTIMATE_GAS, blockType);
-        estimatedGas = contractExecutionService.processCall(serviceParametersForEstimate);
+        // estimate gas is not supported for historical blocks so we ignore the estimate gas logic in historical context
+        if (!isHistoricalContext()) {
+            // Then get the estimated gas
+            final var serviceParametersForEstimate =
+                    serviceParametersForExecutionSingle(transaction, ETH_ESTIMATE_GAS, blockType);
+            estimatedGas = contractExecutionService.processCall(serviceParametersForEstimate);
+        }
 
         final var ethCall = new EthCall();
         ethCall.setId(request.getId());
@@ -282,7 +289,7 @@ public class TestWeb3jService implements Web3jService {
                 .build();
     }
 
-    protected ContractExecutionParameters serviceParametersForTopLevelContractCreate(
+    public ContractExecutionParameters serviceParametersForTopLevelContractCreate(
             final String contractInitCode, final CallServiceParameters.CallType callType, final Address senderAddress) {
         final var senderEvmAccount = new HederaEvmAccount(senderAddress);
 
@@ -299,11 +306,18 @@ public class TestWeb3jService implements Web3jService {
                 .build();
     }
 
-    public Address deployInternal(String binary) {
+    public Address deployInternal(String binary, boolean persistContract) {
         final var id = domainBuilder.id();
         final var contractAddress = toAddress(EntityId.of(id));
-        contractPersist(binary, id);
-
+        if (persistContract) {
+            if (blockType != BlockType.LATEST) {
+                historicalContractPersist(binary, id, contractAddress);
+            } else {
+                contractPersist(binary, id);
+            }
+        } else {
+            contractRuntime = Hex.decode(binary.replace(HEX_PREFIX, ""));
+        }
         return contractAddress;
     }
 
@@ -311,7 +325,33 @@ public class TestWeb3jService implements Web3jService {
         final var contractBytes = Hex.decode(binary.replace(HEX_PREFIX, ""));
         final var entity = domainBuilder
                 .entity()
-                .customize(e -> e.type(CONTRACT).id(entityId).num(entityId).key(domainBuilder.key(KeyCase.ED25519)))
+                .customize(e -> e.type(CONTRACT)
+                        .id(entityId)
+                        .num(entityId)
+                        .key(domainBuilder.key(KeyCase.ED25519))
+                        .balance(3000L))
+                .persist();
+
+        domainBuilder
+                .contract()
+                .customize(c -> c.id(entity.getId()).runtimeBytecode(contractBytes))
+                .persist();
+
+        domainBuilder
+                .contractState()
+                .customize(c -> c.contractId(entity.getId()))
+                .persist();
+    }
+
+    private void historicalContractPersist(String binary, long entityId, final Address contractAddress) {
+        final var contractBytes = Hex.decode(binary.replace(HEX_PREFIX, ""));
+        final var entity = domainBuilder
+                .entity()
+                .customize(e -> e.type(CONTRACT)
+                        .id(entityId)
+                        .num(entityId)
+                        .evmAddress(contractAddress.toArray())
+                        .timestampRange(historicalRange))
                 .persist();
 
         domainBuilder
@@ -344,6 +384,10 @@ public class TestWeb3jService implements Web3jService {
         ethTransactionReceipt.setResult(transactionReceipt);
 
         return ethTransactionReceipt;
+    }
+
+    private boolean isHistoricalContext() {
+        return historicalRange != null;
     }
 
     public interface Deployer<T extends Contract> {
